--- a/src/main.css
+++ b/src/main.css
@@ -85,3 +85,11 @@ footer {
   margin-top: auto;
   background: transparent;
 }
+
+@media (min-width: 700px) {
+  body {
+    background-image: url(./assets/background.jpg);
+    /* background-position: center; */
+    background: cover;
+  }
+}
